-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
None
-
Qt Creator 4.2.0-beta1
-
Ubuntu 12.04 32bit, QC 4.2 (self compiled based on Qt5.6),
OSX 10.10, QC 4.2 (snapshot based on Qt5.7.1)
Steps to reproduce:
- create/open any kind of project, build and run it (optional)
- open/create a Quick Application (or similar) which has a QML file for editing in Design mode
- switch to Design mode for the QML file
- run the project from Designer mode OR if you did the optional first step just open the Application Output pane
Current result:
- the tab(s) do(es) not look right (see attached image)
Expected result:
- tabs do look the same as when in Edit mode
| For Gerrit Dashboard: QTCREATORBUG-17172 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 174993,2 | QmlDesigner: remove styling of the output pane | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |