QmlDesigner: remove styling of the output pane

Setting objectnames to reduce possible influence to other
widgets.
Introduce a background QWidget to set the background color.
AutofillBackground was not working for unclear reason.

Change-Id: I4acd5b7ed5ff9d63b5320b133a82099c5888b839
Task-number: QTCREATORBUG-17172
Reviewed-by: Thomas Hartmann <Thomas.Hartmann@theqtcompany.com>